--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,5 +37,9 @@
         "./src/*"
       ]
     },
+    "plugins": [
+      // required to transform alias imports in d.ts files
+      { "transform": "typescript-transform-paths", "afterDeclarations": true }
+    ]
   }
 }
